test/errors/func1.qk

#OUTPUT
#Syntax Error: Expected function name.
# -> [12] func -> int
#
#END

#RET 1

extern func printf(s:str, ...)

func -> int
    return 0
end

